[gd_scene load_steps=12 format=3 uid="uid://crjhj2560l0h7"]

[ext_resource type="Script" path="res://coin.gd" id="1_w6b8p"]
[ext_resource type="Texture2D" uid="uid://u0mqjhg2dswb" path="res://Daco_4201833.png" id="2_8xyau"]
[ext_resource type="AudioStream" uid="uid://syugh3dptnpr" path="res://8-bit-powerup-6768.mp3" id="3_yffxv"]

[sub_resource type="AtlasTexture" id="AtlasTexture_oux4b"]
atlas = ExtResource("2_8xyau")
region = Rect2(0, 0, 191, 171)

[sub_resource type="AtlasTexture" id="AtlasTexture_k6jw6"]
atlas = ExtResource("2_8xyau")
region = Rect2(191, 0, 191, 171)

[sub_resource type="AtlasTexture" id="AtlasTexture_5akdg"]
atlas = ExtResource("2_8xyau")
region = Rect2(382, 0, 191, 171)

[sub_resource type="AtlasTexture" id="AtlasTexture_86ase"]
atlas = ExtResource("2_8xyau")
region = Rect2(573, 0, 191, 171)

[sub_resource type="AtlasTexture" id="AtlasTexture_4jgpd"]
atlas = ExtResource("2_8xyau")
region = Rect2(764, 0, 191, 171)

[sub_resource type="AtlasTexture" id="AtlasTexture_vymnk"]
atlas = ExtResource("2_8xyau")
region = Rect2(955, 0, 191, 171)

[sub_resource type="SpriteFrames" id="SpriteFrames_nnm4m"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_oux4b")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_k6jw6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5akdg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_86ase")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4jgpd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vymnk")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_66btv"]
radius = 79.0759

[node name="coin" type="Area2D"]
collision_layer = 16
script = ExtResource("1_w6b8p")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_nnm4m")
frame_progress = 0.297846

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-11, 2)
shape = SubResource("CircleShape2D_66btv")

[node name="sound3" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_yffxv")
volume_db = -10.065

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="finished" from="sound3" to="." method="_on_audio_stream_player_finished"]
[connection signal="finished" from="sound3" to="." method="_on_sound_3_finished"]
